fix collapsed mobile menu

--- a/app/assets/stylesheets/bootstrap-overrides.css.sass
+++ b/app/assets/stylesheets/bootstrap-overrides.css.sass
@@ -11,6 +11,13 @@
 .navbar .collapse
   background-color: #fff
 
+.navbar-collapse.in
+  overflow-y: visible
+
+  .navbar-nav.user-controls
+    width: 12em
+    li > a
+      padding-left: 50px
 
 .navbar .brand
   font-family: 'Noto Serif', serif
